--- a/02_Day_Introduction_to_React/index.html
+++ b/02_Day_Introduction_to_React/index.html
@@ -99,31 +99,57 @@
       // JSX element
       const jsxElement = <h1>I am a JSX element</h1>;
 
+      // JSX Dynamic values
+      const welcome = "Welcome to 30 days of React";
+      const title = "Getting Started React";
+      const subtitle = "JavaScript Library";
+      const author = { firstName: "Asabeneh", lastName: "Yetayeh" };
+      const date = "Oct 2, 2020";
+      const techs = ["HTML", "CSS", "JavaScript"];
+
       // JSX element for header of the website
       const header = (
+        /*
         <header>
           <div className="header-wrapper">
+
             <h1>Welcome to 30 days of react</h1>
             <h2>Getting Started React</h2>
             <h3>Javascirpt Library</h3>
             <p>Instructor: Asabeneh Yetayeh</p>
             <small>Oct 2, 2020</small>
+
+          </div>
+        </header>
+        */
+        <header>
+          <div className="header-wrapper">
+            <h1>{welcome}</h1>
+            <h2>{title}</h2>
+            <h3>{subtitle}</h3>
+            <p>
+              Instructor: {author.firstName} {author.lastName}
+            </p>
+            <small>Date: {date}</small>
           </div>
         </header>
       );
 
       const mainStyles = { backgroundColor: "#F3F0F5" };
 
+      const techsFormatted = techs.map((tech) => <li key={tech}>{tech}</li>);
+
       // jsx element for main part of website
       const main = (
         <main>
           <div className="main-wrapper">
-            <p>Prerequisite to get started react.js</p>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Javascirpt</li>
-            </ul>
+            <p>
+              Prerequisite to get started{" "}
+              <strong>
+                <em>react.js</em>
+              </strong>
+            </p>
+            <ul>{techsFormatted}</ul>
           </div>
         </main>
       );
